I fixed a bug regarding a button and I modified some css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <title>Andrei Nemeti | Portofolio</title>
+      <title>Andrei Nemeti | Architecture Website</title>
       <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
@@ -58,7 +58,7 @@
       </header>
       <br/>
       <section class="our-story">
-         <h1>Our Story</h1>
+        <br/><br/><br/>
          <img src="img/img1.jpg">
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -145,7 +145,7 @@
             <a href="#asdadadsadsa"></a>
          </figure>
       </div>
-      <a href="#our-story"><button>View the complete portofolio</button></a>
+      <a href="#our-story"><button>View the complete portfolio</button></a>
    </div>
    <!--  ***************** END WORK   ***************** -->
    <div id="contact">
