Fixed old portfolio example img

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
    <!--  ***************** END LANDING PAGE  ***************** -->
    <!--  ***************** START ABOUT SECTION  ***************** -->
    <div id="about">
-      <br/>
+    
       <header>
          <h1>About</h1>
       </header>
-      <br/>
+  
       <section class="our-story">
-        <br/><br/><br/>
+      <br/>
          <img src="img/img1.jpg">
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -99,6 +99,7 @@
       <br/><br/><br/>
       <p>We have built amazing homes for clients all over the world. Being able to relocate our team in less than 48 hours, we can begin working on your dream home in no time.
       </p>
+      <div class="example-list">
       <div class="example">
          <figure class="info-hover">
             <img src="img/house1.jpg">
@@ -144,6 +145,7 @@
             </figcaption>
             <a href="#asdadadsadsa"></a>
          </figure>
+      </div>
       </div>
       <a href="#our-story"><button>View the complete portfolio</button></a>
    </div>
